# SpiegelMessung

./: CMakeLists.txt  main.cpp
.github/workflows/: windows.yml
